--- a/index.html
+++ b/index.html
@@ -840,6 +840,32 @@ const INSIGHTS_BY_SPORT = {
         </div>
       </div>
 
+        <!-- FAQ (우측 배치: 4개 유지 추천) -->
+        <div class="section faq">
+          <div class="title"><span class="badge">FAQ</span>자주 묻는 질문</div>
+
+          <details>
+            <summary>가입코드(추천코드)를 꼭 입력해야 하나요?</summary>
+            <div class="a">네. 대부분 업체는 <b>가입 시 최초 1회</b>만 입력 가능하며, 미입력/삭제 시 혜택 적용이 어려울 수 있습니다.</div>
+          </details>
+
+          <details>
+            <summary>분석기/마진 계산기 결과가 무조건 맞나요?</summary>
+            <div class="a">아니요. 본 도구는 배당/마진을 정리하는 <b>참고 도구</b>입니다. 적중을 보장하지 않으며 최종 판단은 본인 책임입니다.</div>
+          </details>
+
+          <details>
+            <summary>공식 관리자(문의) 텔레그램은 어디인가요?</summary>
+            <div class="a">공식 관리자 텔레그램은 <b>@UZU59</b> 단 하나입니다. 유사 계정은 사칭일 수 있으니 주의하세요.</div>
+          </details>
+
+          <details>
+            <summary>광고/제휴 문의는 어떻게 하나요?</summary>
+            <div class="a">메인 페이지의 <b>광고 모집 카드(7/8)</b>를 클릭하면 안내 팝업에서 문의용 텔레그램으로 연결됩니다.</div>
+          </details>
+        </div>
+
+
     </div>
   </div>
 
@@ -870,35 +896,8 @@ const INSIGHTS_BY_SPORT = {
     </p>
   </div>
 
-  <!-- FAQ -->
-  <div class="section faq">
-    <div class="title"><span class="badge">FAQ</span>자주 묻는 질문</div>
+  
 
-    <details>
-      <summary>가입코드(추천코드)를 꼭 입력해야 하나요?</summary>
-      <div class="a">네. 대부분 업체는 <b>가입 시 최초 1회</b>만 입력 가능하며, 미입력/삭제 시 혜택 적용이 어려울 수 있습니다.</div>
-    </details>
-
-    <details>
-      <summary>분석기 결과가 무조건 적중하나요?</summary>
-      <div class="a">아니요. 분석기는 배당 흐름을 정리하는 <b>참고 도구</b>입니다. 결과는 보장하지 않으며 본인 판단이 필요합니다.</div>
-    </details>
-
-    <details>
-      <summary>사칭 계정이 많다는데, 공식 관리자 확인 방법은?</summary>
-      <div class="a">공식 관리자 텔레그램은 <b>@UZU59</b> 입니다. 그 외 계정은 사칭일 수 있으니 주의하세요.</div>
-    </details>
-
-    <details>
-      <summary>업체 이용 중 문제가 생기면 어떻게 하나요?</summary>
-      <div class="a">각 업체 팝업의 <b>텔레그램 문의</b>를 통해 문의 가능합니다. 상황 설명과 함께 캡처를 보내주면 빠릅니다.</div>
-    </details>
-
-    <details>
-      <summary>‘88 인증 놀이터’ 기준은 무엇인가요?</summary>
-      <div class="a">운영 안정성, 정산 신뢰도, 실사용 후기, 고객 대응 등을 종합해 선별합니다. 단기 이벤트만 강조하는 곳은 제외합니다.</div>
-    </details>
-  </div>
 
 </div>
 <!-- 인증업체 목록 안내 -->
