--- a/analysis/index.html
+++ b/analysis/index.html
@@ -6,7 +6,7 @@
 
 <title>스포츠 배당 분석기 | 88 커뮤니티</title>
 <meta name="description" content="종목(축구/농구/야구/배구/e스포츠/하키)별 배당 입력으로 승리 확률(배당 기반·추정), 오버라운드(마진), 밸류(EV), 권장 비중(보수적 Kelly)까지 계산하는 분석기입니다. (판단 보조용)" />
-<link rel="canonical" href="https://88st.cloud/analysis.html" />
+<link rel="canonical" href="https://88st.cloud/analysis" />
 <meta name="robots" content="index,follow" />
 
 <style>
@@ -546,7 +546,7 @@ hr.sep{
 
 <div class="header">
   <a class="logo-link" href="./" aria-label="홈으로 이동">
-    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
+    <img src="img/logo-88-community.png" alt="88 커뮤니티" class="logo-88-community.png">
   </a>
   <div class="sub">스포츠 배당 분석기 (통합형 · 히스토리/마진/EV/비교)</div>
 </div>
