--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body{
   gap:14px;
 }
 #loader .logoWrap{
-  width:min(180px, 52vw);
+  width:min(220px, 60vw);
   aspect-ratio:1/1;
   display:flex;
   align-items:center;
@@ -178,7 +178,7 @@ body{
   text-decoration:none;
 }
 .header .logoImg{
-  width:min(170px, 48vw);
+  width:min(220px, 62vw);
   height:auto;
   display:block;
   padding:10px;
@@ -632,74 +632,151 @@ select.insight-select{
 
 /* ✅ 부드러운 스크롤 */
 html{ scroll-behavior:smooth; }
-
-/* ✅ 랜딩 바로가기 버튼 (입플/카지노/슬롯/미니게임) */
-.landing-nav{
-  margin-top:12px;
-  display:grid;
-  grid-template-columns:repeat(2, 1fr);
-  gap:10px;
-}
-@media(min-width:520px){
-  .landing-nav{ grid-template-columns:repeat(4, 1fr); }
-}
-.navbtn{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap:8px;
-  padding:12px 10px;
-  border-radius:14px;
-  text-decoration:none;
-  font-weight:900;
-  background:rgba(0,0,0,.28);
-  border:1px solid rgba(255,255,255,.10);
-  color:#fff;
-  cursor:pointer;
-  user-select:none;
-}
-.navbtn:hover{ border-color: rgba(245,226,122,.45); }
-.navbtn .tag{
-  font-size:11px;
-  font-weight:900;
-  padding:4px 8px;
-  border-radius:999px;
-  background:linear-gradient(135deg,var(--gold),var(--gold2));
-  color:#111;
-}
-
 </style>
 
 <script>
 /* ===== 카드 데이터 (✅ card7, card8 광고모집 추가) ===== */
 const CARD_DATA = {
-  card1:{ title:"B WIN", code:"AS88", link:"https://bwk999.com", telegram:"UZU59",
+  card1:{
+    title:"B WIN",
+    code:"AS88",
+    link:"https://bwk999.com",
+    telegram:"UZU59",
     benefit:"고액전용 USDT 무기명가입 수수료지원 / 모든게임 입금플러스",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card2:{ title:"CAPS", code:"RUST", link:"https://caps-22.com", telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"high",
+    reasons:[
+      "고액 유저 기준 검증 + 운영 안정성 우선",
+      "입금플러스/수수료 지원 등 혜택 조건 명확",
+      "문의/대응 라인 확실(텔레그램 연결)"
+    ]
+  },
+  card2:{
+    title:"CAPS",
+    code:"RUST",
+    link:"https://caps-22.com",
+    telegram:"UZU59",
     benefit:"고액전용 미겜 첫충 5% / 페이백 5% / 출석 30만원",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card3:{ title:"BETZY", code:"BANGU", link:"https://b88-et.com", telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"high",
+    reasons:[
+      "미니게임/스포츠 동시 이용 유저 비중 높음",
+      "첫충/페이백 등 보너스 구조가 깔끔",
+      "고객 응대 및 정산 안정성 후기 반영"
+    ]
+  },
+  card3:{
+    title:"BETZY",
+    code:"BANGU",
+    link:"https://b88-et.com",
+    telegram:"UZU59",
     benefit:"스포츠 첫 10% / 미겜 첫 5% / 페이백 5%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"신규",
+    badgeText:"신규",
+    badgeCls:"new",
+    priority:"high",
+    reasons:[
+      "스포츠/미니게임 밸런스형 혜택 구성",
+      "가입코드 기준 혜택 적용 정책 명확",
+      "커뮤니티 제보 기반으로 지속 모니터링"
+    ]
+  },
+  card4:{
+    title:"VEGAS",
+    code:"6789",
+    link:"https://las403.com",
+    telegram:"UZU59",
     benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card5:{ title:"LULA BET", code:"ZZ99", link:"https://lula.ws", telegram:"PSC991",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"검증",
+    badgeText:"검증",
+    badgeCls:"verified",
+    priority:"normal",
+    reasons:[
+      "카지노/슬롯 이용 유저 전환이 높음",
+      "입플/보너스 조건 공지 및 적용 라인 명확",
+      "장기 운영 이력 기반으로 선별"
+    ]
+  },
+  card5:{
+    title:"LULA BET",
+    code:"ZZ99",
+    link:"https://lula.ws",
+    telegram:"PSC991",
     benefit:"원화·USDT 무기명가입 / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card6:{ title:"CHOY BET", code:"TAN", link:"https://cy-40.com", telegram:"DY0302",
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"고액",
+    badgeText:"고액",
+    badgeCls:"gold",
+    priority:"normal",
+    reasons:[
+      "무기명/USDT 등 고액 동선에 강점",
+      "페이백 등 리베이트 성격 혜택 제공",
+      "고액 유저 기준 응대/정산 체크"
+    ]
+  },
+  card6:{
+    title:"CHOY BET",
+    code:"TAN",
+    link:"https://cy-40.com",
+    telegram:"DY0302",
     benefit:"신규 30% / 매충 10% / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
+    notice:"가입코드 미입력 시 혜택 적용 불가",
+    tag:"추천",
+    badgeText:"추천",
+    badgeCls:"rec",
+    priority:"normal",
+    reasons:[
+      "신규/매충/페이백 등 보너스 구성이 강함",
+      "미니게임/카지노 유저 전환이 빠름",
+      "문의 라인 분리 운영으로 대응 속도 확보"
+    ]
+  },
 
-  /* ✅ 광고 모집 카드 */
-  card7:{ title:"광고/제휴 모집", code:"", link:"", telegram:"UZU59",
-    benefit:"88 커뮤니티에 광고/제휴를 원하시면 문의 주세요.",
-    notice:"광고 문의는 텔레그램 @UZU59 로만 진행합니다." },
-
-  card8:{ title:"광고 자리 오픈", code:"", link:"", telegram:"UZU59",
-    benefit:"배너/카드 광고 자리 오픈 · 합리적 조건",
-    notice:"사칭 주의: 공식 관리자 @UZU59 단 하나" }
+  /* ✅ 광고 모집(자리) — 카드7/8 */
+  card7:{
+    title:"광고 모집 (자리 1)",
+    code:"-",
+    link:"#",
+    telegram:"UZU59",
+    benefit:"메인 카드 광고 제휴를 원하시면 문의 주세요.",
+    notice:"광고/제휴 문의 전용 카드입니다.",
+    tag:"광고",
+    badgeText:"광고",
+    badgeCls:"ad",
+    priority:"ad",
+    recruit:true,
+    reasons:[
+      "메인 상단 노출(클릭/전환 강화)",
+      "텔레그램 유입 동선 포함",
+      "고정 배너/카드 문구 커스텀 가능"
+    ]
+  },
+  card8:{
+    title:"광고 모집 (자리 2)",
+    code:"-",
+    link:"#",
+    telegram:"UZU59",
+    benefit:"입플/보너스/페이백 강점 업체 우선 모집",
+    notice:"광고/제휴 문의 전용 카드입니다.",
+    tag:"광고",
+    badgeText:"광고",
+    badgeCls:"ad",
+    priority:"ad",
+    recruit:true,
+    reasons:[
+      "메인/랜딩/딥링크 동시 지원",
+      "주간 리포트(클릭/유입) 제공 가능",
+      "업체별 추천 문구 3줄 자동 표시"
+    ]
+  }
 };
 
 /* ===== 인사이트 (종목별) ===== */
@@ -794,17 +871,6 @@ const INSIGHTS_BY_SPORT = {
     <div class="title"><span class="badge">FREE</span>스포츠 배당 분석기</div>
     <div class="text">배당 흐름·마진·EV를 간단히 확인할 수 있는 분석기입니다.</div>
     <a class="analyze-btn" href="/analysis/">분석기 이동</a>
-
-    <div class="landing-nav" aria-label="카테고리 랜딩 바로가기">
-      <a class="navbtn" href="/landing-a/"><span class="tag">A</span>입플/보너스</a>
-      <a class="navbtn" href="/landing-c/"><span class="tag">C</span>카지노</a>
-      <a class="navbtn" href="/landing-b/"><span class="tag">B</span>미니게임</a>
-      <a class="navbtn" href="/landing-d/"><span class="tag">D</span>슬롯</a>
-    </div>
-    <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
-      ※ 각 버튼은 해당 카테고리 랜딩으로 이동합니다.
-    </div>
-
   </div>
 
   <!-- ✅ 상단 2단 레이아웃 (좌: 도구/콘텐츠 · 우: 안내/공지) -->
@@ -1406,7 +1472,7 @@ function renderPopularAndRecent(){
       return d && d.tag === "rec" && !d.recruit;
     });
     if(recIds.length){
-      const sorted = recIds.slice().sort((a,b)=> getClick(b) - getClick(a));
+      const sorted = recIds.slice().sort((a,b)=> getClickCount(b) - getClickCount(a));
       const top = sorted.slice(0,3);
       sumRow.innerHTML = top.map(id=>{
         const d = CARD_DATA[id];
