--- a/index.html
+++ b/index.html
@@ -925,6 +925,12 @@ const INSIGHTS_BY_SPORT = {
   <div class="mini-row" id="popularRow"></div>
 </div>
 
+<!-- ✅ 최근 본 카드 -->
+<div class="mini-wrap" id="recentWrap" style="display:none;">
+  <div class="mini-title">🕒 최근 본 카드</div>
+  <div class="mini-row" id="recentRow"></div>
+</div>
+
 <!-- 카드 그리드 (JS 렌더) -->
 <div class="vendor-grid" id="vendorGrid"></div>
 <!-- 방문자 -->
@@ -1512,7 +1518,7 @@ function calcSimpleMargin(){
   padding:0 14px;
 }
 .landing-seo h3{
-  font-size:12px;
+  font-size:11px;
   color:#777;
   margin:0 0 6px;
   font-weight:700;
