--- a/index.html
+++ b/index.html
@@ -924,8 +924,12 @@ const INSIGHTS_BY_SPORT = {
   <div class="mini-title">🔥 인기 TOP3</div>
   <div class="mini-row" id="popularRow"></div>
 </div>
-
-
+  
+<!-- ✅ 최근 본 카드 -->
+<div class="mini-wrap" id="recentWrap" style="display:none;">
+  <div class="mini-title">🕒 최근 본 카드</div>
+  <div class="mini-row" id="recentRow"></div>
+</div>
 
 <!-- 카드 그리드 (JS 렌더) -->
 <div class="vendor-grid" id="vendorGrid"></div>
